2008-05-15  Anders Carlsson  <andersca@apple.com>

        Update test results now that navigator.onLine exists.
        
        * fast/dom/Window/window-properties-expected.txt:

2008-05-15  Rob Buis  <buis@kde.org>

        Reviewed by Dave Hyatt.

        Testcase for:
        https://bugs.webkit.org/show_bug.cgi?id=17433
        getComputedStyle() -> clip returns empty string

        * fast/css/getPropertyValue-clip-expected.txt: Added.
        * fast/css/getPropertyValue-clip.html: Added.

2008-05-15  Timothy Hatcher  <timothy@apple.com>

        Test case added for <rdar://problem/5790805> Inspector's source view
        missing some words, doubles others in JS source in <script> tag (17752)

        Reviewed by Dave Hyatt.

        * fast/frames/resources/viewsource-frame-2.html: Added.
        * fast/frames/viewsource-plain-text-tags-expected.txt: Added.
        * fast/frames/viewsource-plain-text-tags.html: Added.

2008-05-15  Stephanie Lewis  <slewis@apple.com>

        Reviewed by Anders.

        Dump unload event counts for frames.

        * fast/dom/Window/get-set-properties-expected.txt:
        * fast/events/onunload-expected.txt:
        * fast/events/onunload-not-on-body-expected.txt:
        * fast/events/onunload-window-property-expected.txt:
        * fast/forms/button-state-restore-expected.txt:
        * fast/history/history_reload-expected.txt:
        * fast/loader/onunload-form-submit-crash-2-expected.txt:
        * fast/loader/onunload-form-submit-crash-expected.txt:
        * http/tests/xmlhttprequest/xhr-onunload-expected.txt:
        * platform/mac/fast/loader/start-load-in-unload-expected.txt:

2008-05-15  David Kilzer  <ddkilzer@apple.com>

        Bug 19085: font-family: initial sets font-family differently than font: initial

        <https://bugs.webkit.org/show_bug.cgi?id=19085>
        <rdar://problem/5939391>

        Reviewed by David Hyatt.

        * fast/css/font-family-initial-expected.txt: Added.